--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
    <div class="gallery" style="display: flex; gap: 20px; justify-content: center; align-items: flex-start; padding: 20px; background-color: #f9f9f9;">
   <!-- Certificate 1 -->
   <div class="certificate" style="display: flex; flex-direction: column; align-items: center; width: 250px; border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); background-color: #fff; padding: 15px; text-align: center;">
-    <img src="c1.png" alt="Restart Yourself Certificate" style="max-width: 100%; height: auto; border-radius: 4px; margin-bottom: 10px;">
+    <img src="c1.jpeg" alt="Restart Yourself Certificate" style="max-width: 100%; height: auto; border-radius: 4px; margin-bottom: 10px;">
     <div class="description">
       <h3 style="font-size: 18px; margin: 10px 0; color: #333;">Restart Yourself Workshop</h3>
       <p style="font-size: 14px; color: #555;">A certificate of appreciation for participating in the Restart Yourself workshop.</p>
@@ -287,7 +287,7 @@
 
   <!-- Certificate 2 -->
   <div class="certificate" style="display: flex; flex-direction: column; align-items: center; width: 250px; border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); background-color: #fff; padding: 15px; text-align: center;">
-    <img src="c2.png" alt="Hult Prize Certificate" style="max-width: 100%; height: auto; border-radius: 4px; margin-bottom: 10px;">
+    <img src="c2.jpeg" alt="Hult Prize Certificate" style="max-width: 100%; height: auto; border-radius: 4px; margin-bottom: 10px;">
     <div class="description">
       <h3 style="font-size: 18px; margin: 10px 0; color: #333;">Hult Prize 2019</h3>
       <p style="font-size: 14px; color: #555;">Recognition for participation in the 2019 Hult Prize OnCampus at NSTU.</p>
@@ -296,7 +296,7 @@
 
   <!-- Certificate 3 -->
   <div class="certificate" style="display: flex; flex-direction: column; align-items: center; width: 250px; border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); background-color: #fff; padding: 15px; text-align: center;">
-    <img src="c4.png" alt="BANSDOC Certificate" style="max-width: 100%; height: auto; border-radius: 4px; margin-bottom: 10px;">
+    <img src="c3.jpeg" alt="BANSDOC Certificate" style="max-width: 100%; height: auto; border-radius: 4px; margin-bottom: 10px;">
     <div class="description">
       <h3 style="font-size: 18px; margin: 10px 0; color: #333;">BANSDOC Training Completion</h3>
       <p style="font-size: 14px; color: #555;">A certificate awarded for completing the course in Information Science & Library Management in September 2023.</p>
@@ -305,7 +305,7 @@
 
   <!-- Certificate 4 -->
   <div class="certificate" style="display: flex; flex-direction: column; align-items: center; width: 250px; border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); background-color: #fff; padding: 15px; text-align: center;">
-    <img src="c3.png" alt="Grameen Bank Scholarship Certificate" style="max-width: 100%; height: auto; border-radius: 4px; margin-bottom: 10px;">
+    <img src="c4.jpeg" alt="Grameen Bank Scholarship Certificate" style="max-width: 100%; height: auto; border-radius: 4px; margin-bottom: 10px;">
     <div class="description">
       <h3 style="font-size: 18px; margin: 10px 0; color: #333;">Grameen Bank Scholarship Certificate</h3>
       <p style="font-size: 14px; color: #555;">A certificate awarded for Grameen Bank Scholarship Certificate</p>
